--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2003-09-16  Ville PÃtsi  <drc@gimp.org>
+
+	* style/wgo.js
+	* style/wgo.css: Fixed menu resizing with large font sizes.
+
 2003-09-12  Raphael Quinet  <quinet@gamers.org>
 
 	* includes/wgo-tutorial-init.xhtml
