--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,11 @@
+2003-09-16  Helvetix Victorinox  <helvetix@gimp.org>
+
+	* install.exclude: Readded /includes/news.inc
+	
+	* Makefile: backed-out combined SSI preprocessing and attribute
+	  rewriting for .htrw files.  Need to redo the installation order so
+	  include files are available at build time.
+
 2003-09-16 scizzo <scizzo@gimp.org>
 
 	* /develop/old-index.bak: Add this as a backup for the getting
@@ -22,15 +30,22 @@
 	hardcoded in every tutorial.
 
 2003-09-11  Helvetix Victorinox  <helvetix@gimp.org>
+	* install.exclude: Readded /includes/news.inc
+	
+	* Makefile: backed-out combined SSI preprocessing and attribute
+	  rewriting for .htrw files.  Need to redo the installation order so
+	  include files are available at build time.
 
-	* Checkin the Makefile with combined SSI preprocessing and
-	  attribute rewriting for .htrw files.
+	* install.exclude: Removed news.inc
 
-	* Removed admin/example.ssi
+	* Makefile: Checkin with combined SSI preprocessing and attribute
+	  rewriting for .htrw files. (2nd attempt to checkin)
 
-	* Added ssi preprocessing for .htrw files
+	* admin/example.ssi: removed
 
-	* renamed admin/index.ssi -> admin/index.htrw
+	* Makefile: Added ssi preprocessing for .htrw files
+
+	* admin/index.ssi: renamed admin/index.htrw
 	
 
 2003-09-09  Raphael Quinet  <quinet@gamers.org>
