--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2003-09-19  Ville Pätsi  <drc@gimp.org>
+
+	* style/wgo.css: Added clear: left; to h1.
+
 2003-09-19  Helvetix Victorinox  <helvetix@gimp.org>
 
 	* Added version id to news articles in the main (current news)
