--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,18 @@
+2003-09-21 scizzo <scizzo@gimp.org>
+
+	* /links/org.html, index.html: Removed files.
+	* /links/index.htrw: Fixed broken link to mailinglists. Removed include
+	link to a file that Raphaël hve removed. Removed the (dis) in the
+	header for Organisation.
+	* /links/org.htrw: Removed broken links.
+	
+	* /includes/wgo-howto-bugs-init.xhtml
+	* /includes/wgo-howto-source-init.xhtml
+	* /includes/wgo-howto-unix-init.xhtml
+	* /includes/wgo-page-init.xhtml
+	* /includes/wgo-tutorial-init.xhtml: Removed "Resources" and "Contest"
+	from main menu.
+
 2003-09-20  Raphael Quinet  <quinet@gamers.org>
 
 	* downloads/install_help.html
