--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2003-09-21  Raphael Quinet  <quinet@gamers.org>
+
+	* windows/index.htrw: Better description of the differences
+	between the installer and the zip archives.  This should really
+	fix bug #119539, this time.
+
 2003-09-21 scizzo <scizzo@gimp.org>
 
 	* /unix/index.htrw: Commented out "File -> Preferenses" and 
