--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2003-09-21  Helvetix Victorinox  <helvetix@gimp.org>
+
+	* ./install.sh: Save make output into make.out
+
 2003-09-20  Helvetix Victorinox  <helvetix@gimp.org>
 
 	* programmatic/admin/develop/Makefile (install-first): install
